# machbarkeit-backend

./: .gitignore  .prettierignore  Cargo.toml  Dockerfile  README.md  app.yaml
.github/workflows/: build.yaml  release.yaml
.sqlx/: query-14f6d800fe36c91800bc5604f81da72f26f4bcef21c3f60a394cfc096d6d93cf.json  query-3f66257c56ff9f84ed6f6674dc4eb3c0e06400c781a7947fa6d51686272c25e6.json  query-522fc93bad2587af0d88e54d996f42c83030950fcdb93f9b8e2b5b64ae7f5b43.json  query-5a264169317000fdfeb6cf0f3b71878b4aa8eebf3c2c1f6e0ce48fae675e9b8a.json  query-7f9a973e4a2ad4215b627e8080f4a362e3fb37fa3f36c740b53975e7074c4650.json  query-954312c10aba6180227461bc91859b1ab8f183a521d8ada08ef8b66c3f963641.json  query-a7de5ac525370108a608e7f8e561f77dc092d4d5d160804687e2f870a271c9d7.json  query-cb5476fd2bcac704956a71a75a9da7d8a147b72db5888dc4a4dee561cad30087.json  query-da099c013d25334c0bd9edfdea1bf1785399bc4a34a06154b06f9892747c00c0.json
auth/: Cargo.toml
auth/migrations/: 0_init.sql
auth/src/: lib.rs  oauth.rs  oidc.rs  users.rs
dev/: compose.yaml
dev/data/realm/: realm.json
migrations/: 00_init.sql
src/: auth.rs  config.rs  feasibility.rs  main.rs  server.rs
src/feasibility/: api.rs  websocket.rs
