[package]
name = "machbarkeit-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "time", "chrono", "migrate", "uuid"] }
axum = { version = "0.8.4", features = ["macros", "ws"] }
config = "0.15.13"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
tokio = { version = "1.46.1", features = ["full"] }
http-body-util = "0.1.3"
tower = "0.5.2"
http = "1.3.1"
time = { version = "0.3.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.141"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
url = "2.5.4"
futures-util = "0.3.31"
axum-test = { version = "17.3.0", features = ["pretty-assertions", "ws"] }
log = "0.4.27"
