[package]
name = "machbarkeit-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "auth"]

[dependencies]
auth = { path = "auth" }

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "time", "chrono", "migrate", "uuid"] }
axum = { version = "0.8.4", features = ["macros", "ws"] }
config = "0.15.13"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.98"
tokio = { version = "1.46.1", features = ["full"] }
tower-sessions = "0.14.0"
http = "1.3.1"
time = { version = "0.3.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.141"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures-util = "0.3.31"
axum-test = { version = "18.0.1", features = ["pretty-assertions", "ws"] }
log = "0.4.27"
cookie = "0.18.1"
async-oidc-jwt-validator = "0.1.2"
env_logger = "0.11.8"
axum-login = "0.18.0"
oauth2 = "5.0.0"
headers = "0.4.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
urlencoding = "2.1.3"
axum-reverse-proxy = { version = "1.0.3", features = ["tls", "native-tls"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
httpmock = "0.8.1"
